# omni

./: .gitignore  AGENT.md  asdf.py  download.py  gen.py  pyproject.toml
notebooks/: asdf.py  autoencoder.ipynb  chat.ipynb  gpt.ipynb  grpo-2.ipynb  grpo.ipynb  mnist-classify.ipynb  mnist.ipynb  poem.ipynb  prompts_updated.ipynb
notebooks/custom/: finetune.ipynb
notebooks/finetune/: grpo.ipynb  inference.ipynb
notebooks/math/: data.ipynb  eval.ipynb
notebooks/prompts/: main.ipynb
scripts/: autoencoder.py  gpt.py  grpo-simple.py  preprocess.py  tokenizer.py
src/omni/: __init__.py
src/omni/models/: autoencoder.py  gpt.py
src/omni/utils/: __init__.py  dataset.py  device.py  get_device.py
